2012-11-26  Christopher Hoobin  <hsirhc@gmail.com>

	* bootstrap.js Updated KaT search string.