@@ -1,7 +1,7 @@
 {
     "name": "Quick Torrent Search",
 
-    "version": "2012.11",
+    "version": "2013.06",
 
     "manifest_version": 2,
 
