@@ -1,7 +1,7 @@
 var torrent_sites = [
-    { name: "The Pirate Bay",    url: "http://thepiratebay.se/search/%s/0/99/0" },
+    { name: "The Pirate Bay",    url: "http://thepiratebay.sx/search/%s/0/99/0" },
     { name: "Torrentz",          url: "http://torrentz.eu/any?q=%s" },
-    { name: "Kickass Torrents",  url: "http://www.kat.ph/search/%s/" },
+    { name: "Kickass Torrents",  url: "http://kickass.to/search/%s/" },
     { name: "ISO Hunt",          url: "http://isohunt.com/torrents/?ihq=%s" },
     { name: "Bitsnoop",          url: "http://bitsnoop.com/search/all/%s/c/d/1" },
     { name: "Extra Torrent",     url: "http://extratorrent.com/search/?search=%s" },
