@@ -3,7 +3,7 @@
      xmlns:em="http://www.mozilla.org/2004/em-rdf#">
   <Description about="urn:mozilla:install-manifest">
     <em:id>qts@moongiraffe.net</em:id>
-    <em:version>20121125</em:version>
+    <em:version>20130615</em:version>
     <em:name>Quick Torrent Search</em:name>
     <em:description>Search for torrents directly from the context menu.</em:description>
     <em:homepageURL>https://addons.mozilla.org/addon/quick-torrent-search</em:homepageURL>
@@ -17,7 +17,7 @@
       <Description>
         <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
         <em:minVersion>7.0</em:minVersion>
-        <em:maxVersion>18.0</em:maxVersion>
+        <em:maxVersion>22.*</em:maxVersion>
       </Description>
     </em:targetApplication>
   </Description>
