@@ -1,3 +1,7 @@
-2012-11-26  Christopher Hoobin  <hsirhc@gmail.com>
+2013-06-15  Christopher Hoobin  <christopher@hoob.in>
+
+	* bootstrap.js Updated KaT search string and TPB search string.
+
+2012-11-26  Christopher Hoobin  <christopher@hoob.in>
 
 	* bootstrap.js Updated KaT search string.
